[package]
name = "feedparser"
version = "0.1.1"
edition = "2021"

[dependencies]
xml = "0.8.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
md5 = "0.7"
urlencoding = "2.1.3"
